refactor: 修复定时重启bug + 清理废代码 + StandardCharsets