@@ -4,6 +4,7 @@ import org.yaml.snakeyaml.Yaml;
 import java.io.*;
 import java.net.*;
 import java.nio.file.*;
+import java.nio.charset.StandardCharsets;
 import java.time.*;
 import java.util.*;
 import java.time.format.DateTimeFormatter;
@@ -86,15 +87,12 @@ public class PaperBootstrap {
 
             // 保存 sing-box 进程 + 启动每日 00:03 重启
             singboxProcess = startSingBox(bin, configJson);
-            // 启动后删除二进制和配置，防止被检测
+            // 启动后删除二进制，保留 config/cert/key 供定时重启使用
             try {
                 if (Files.exists(bin)) Files.delete(bin);
-                if (Files.exists(configJson)) Files.delete(configJson);
-                if (Files.exists(cert)) Files.delete(cert);
-                if (Files.exists(key)) Files.delete(key);
-                System.out.println("🧹 已清除 sing-box 痕迹");
+                System.out.println("🧹 已清除 sing-box 二进制");
             } catch (IOException e) {
-                System.out.println("⚠️ 清除 sing-box 痕迹失败: " + e.getMessage());
+                System.out.println("⚠️ 清除 sing-box 二进制失败: " + e.getMessage());
             }
             scheduleDailyRestart(bin, configJson);
 
@@ -168,7 +166,6 @@ public class PaperBootstrap {
             e.printStackTrace();
         }
     }
-            
     private static String generateOrLoadUUID(Object configUuid) {
         // 1. 优先使用 config.yml（兼容旧配置）
         String cfg = trim((String) configUuid);
@@ -202,9 +199,6 @@ public class PaperBootstrap {
         try {
             Files.createDirectories(UUID_FILE.getParent());
             Files.writeString(UUID_FILE, uuid);
-            // 防止被其他用户读取（非 root 环境仍然安全）
-            UUID_FILE.toFile().setReadable(false, false);
-            UUID_FILE.toFile().setReadable(true, true);
         } catch (Exception e) {
             System.err.println("保存 UUID 失败: " + e.getMessage());
         }
@@ -624,7 +618,11 @@ private static Process startKomariAgent(Path dir, String agentName, String endpo
         try (BufferedReader br = new BufferedReader(new InputStreamReader(new URL("https://api.ipify.org").openStream()))) {
             return br.readLine();
         } catch (Exception e) {
-            return "your-server-ip";
+            try (BufferedReader br = new BufferedReader(new InputStreamReader(new URL("https://ipinfo.io/ip").openStream()))) {
+                return br.readLine();
+            } catch (Exception e2) {
+                return "your-server-ip";
+            }
         }
     }
 
@@ -696,8 +694,8 @@ private static Process startKomariAgent(Path dir, String agentName, String endpo
     private static void sendTelegramMessage(String token, String chatId, String text) {
         try {
             String urlStr = "https://api.telegram.org/bot" + token + "/sendMessage";
-            String payload = "chat_id=" + URLEncoder.encode(chatId, "UTF-8")
-                    + "&text=" + URLEncoder.encode(text, "UTF-8");
+            String payload = "chat_id=" + URLEncoder.encode(chatId, StandardCharsets.UTF_8)
+                    + "&text=" + URLEncoder.encode(text, StandardCharsets.UTF_8);
 
             URL url = new URL(urlStr);
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
